@@ -20,6 +20,8 @@ Release 1.4.6p2 (2013-06-xx)
 - fixed GH# 189: Poco::NumberParser::tryParse() documentation bug
 - fixed GH# 172: IPv6 Host field is stripped of Brackets in HTTPClientSession
 - fixed GH# 188: Net: SocketAddress operator < unusable for std::map key
+- fixed GH# 128: DOMWriter incorrectly adds SYSTEM keyword to DTD if PUBLIC is 
+  already specified
 
 
 Release 1.4.6p1 (2013-03-06)
@@ -1837,4 +1839,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#82 $
+$Id: //poco/1.4/dist/CHANGELOG#83 $
